--- a/_posts/2019-08-15-vue初见(路由).md
+++ b/_posts/2019-08-15-vue初见(路由).md
@@ -1,4 +1,3 @@
----
 layout:     post
 title:     vue初见
 subtitle:   (路由)
@@ -8,8 +7,7 @@ header-img: img/post-bg-vue.jpg
 catalog: true
 tags:
     - 前端  
-    - vue
----
+        - vue
 
 ### Vue路由
 
@@ -98,4 +96,17 @@ this.$route.query
 ```
 
 
+
+#### 编程导航
+
+```js
+<button @click="goHome()">通过js跳转到home</button>
+methods:{
+      goHome(){
+        this.$router.push({path: '/helloworld'})
+      }
+    }
+// 命名路由
+this.$router.push({ name: 'user', params: { userId: '123' }})
+```
 
